--- a/UI/ColorVision.Core/ColorVision.Core.csproj
+++ b/UI/ColorVision.Core/ColorVision.Core.csproj
@@ -11,16 +11,12 @@
 	  <SymbolPackageFormat>snupkg</SymbolPackageFormat>
 	  <NoWarn>$(NoWarn);NU5100</NoWarn>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Folder Include="libs\" />
-  </ItemGroup>
 	<ItemGroup>
 		<None Include="..\..\x64\Release\opencv_helper.dll" Link="libs\opencv_helper.dll">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 			<Pack>true</Pack>
 			<PackagePath>libs</PackagePath>
-		</None>
+		</None>		
 		<None Include="..\..\packages\opencv\x64\opencv_core4100.dll" Link="libs\opencv_core4100.dll">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 			<Pack>true</Pack>
@@ -46,6 +42,14 @@
 			<Pack>true</Pack>
 			<PackagePath>libs</PackagePath>
 		</None>
+		<None Include="ColorVision.Core.props" Link="libs\ColorVision.Core.props">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+			<Pack>true</Pack>
+			<PackagePath>build\net8.0\ColorVision.Core.props</PackagePath>
+		</None>
+	</ItemGroup>
+	<ItemGroup>
+
 	</ItemGroup>
 
 </Project>
