--- a/UI/ColorVision.Core/ColorVision.Core.csproj
+++ b/UI/ColorVision.Core/ColorVision.Core.csproj
@@ -15,32 +15,33 @@
 		<None Include="..\..\x64\Release\opencv_helper.dll" Link="libs\opencv_helper.dll">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 			<Pack>true</Pack>
-			<PackagePath>lib\net8.0-windows7.0\libs</PackagePath>
-		</None>		
+			<PackagePath>libs</PackagePath>
+			<PackageCopyToOutput>true</PackageCopyToOutput>		</None>		
 		<None Include="..\..\packages\opencv\x64\opencv_core4100.dll" Link="libs\opencv_core4100.dll">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 			<Pack>true</Pack>
-			<PackagePath>lib\net8.0-windows7.0\libs</PackagePath>
-		</None>
+			<PackagePath>libs</PackagePath>
+			<PackageCopyToOutput>true</PackageCopyToOutput>		</None>
 		<None Include="..\..\packages\opencv\x64\opencv_highgui4100.dll" Link="libs\opencv_highgui4100.dll">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 			<Pack>true</Pack>
-			<PackagePath>lib\net8.0-windows7.0\libs</PackagePath>
-		</None>
+			<PackagePath>libs</PackagePath>
+			<PackageCopyToOutput>true</PackageCopyToOutput>		</None>
 		<None Include="..\..\packages\opencv\x64\opencv_imgcodecs4100.dll" Link="libs\opencv_imgcodecs4100.dll">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 			<Pack>true</Pack>
-			<PackagePath>lib\net8.0-windows7.0\libs</PackagePath>
-		</None>
+			<PackagePath>libs</PackagePath>
+			<PackageCopyToOutput>true</PackageCopyToOutput>		</None>
 		<None Include="..\..\packages\opencv\x64\opencv_imgproc4100.dll" Link="libs\opencv_imgproc4100.dll">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 			<Pack>true</Pack>
-			<PackagePath>lib\net8.0-windows7.0\libs</PackagePath>
-		</None>
+			<PackagePath>libs</PackagePath>
+			<PackageCopyToOutput>true</PackageCopyToOutput>		</None>
 		<None Include="..\..\packages\opencv\x64\opencv_videoio4100.dll" Link="libs\opencv_videoio4100.dll">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 			<Pack>true</Pack>
-			<PackagePath>lib\net8.0-windows7.0\libs</PackagePath>
+			<PackagePath>libs</PackagePath>
+			<PackageCopyToOutput>true</PackageCopyToOutput>
 		</None>
 		<None Include="ColorVision.Core.props" Link="libs\ColorVision.Core.props">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
