--- a/UI/ColorVision.Core/ColorVision.Core.csproj
+++ b/UI/ColorVision.Core/ColorVision.Core.csproj
@@ -9,44 +9,47 @@
 	  <PackageProjectUrl>https://github.com/xincheng213618/scgd_general_wpf</PackageProjectUrl>
 	  <IncludeSymbols>True</IncludeSymbols>
 	  <SymbolPackageFormat>snupkg</SymbolPackageFormat>
-	  <NoWarn>$(NoWarn);NU5100</NoWarn>
   </PropertyGroup>
 	<ItemGroup>
 		<None Include="..\..\x64\Release\opencv_helper.dll" Link="libs\opencv_helper.dll">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 			<Pack>true</Pack>
 			<PackagePath>libs</PackagePath>
-			<PackageCopyToOutput>true</PackageCopyToOutput>		</None>		
+		</None>		
 		<None Include="..\..\packages\opencv\x64\opencv_core4100.dll" Link="libs\opencv_core4100.dll">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 			<Pack>true</Pack>
 			<PackagePath>libs</PackagePath>
-			<PackageCopyToOutput>true</PackageCopyToOutput>		</None>
+		</None>
 		<None Include="..\..\packages\opencv\x64\opencv_highgui4100.dll" Link="libs\opencv_highgui4100.dll">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 			<Pack>true</Pack>
-			<PackagePath>libs</PackagePath>
-			<PackageCopyToOutput>true</PackageCopyToOutput>		</None>
+			<PackagePath>libs</PackagePath>	
+		</None>
 		<None Include="..\..\packages\opencv\x64\opencv_imgcodecs4100.dll" Link="libs\opencv_imgcodecs4100.dll">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 			<Pack>true</Pack>
 			<PackagePath>libs</PackagePath>
-			<PackageCopyToOutput>true</PackageCopyToOutput>		</None>
+			</None>
 		<None Include="..\..\packages\opencv\x64\opencv_imgproc4100.dll" Link="libs\opencv_imgproc4100.dll">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 			<Pack>true</Pack>
 			<PackagePath>libs</PackagePath>
-			<PackageCopyToOutput>true</PackageCopyToOutput>		</None>
+		</None>
 		<None Include="..\..\packages\opencv\x64\opencv_videoio4100.dll" Link="libs\opencv_videoio4100.dll">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 			<Pack>true</Pack>
 			<PackagePath>libs</PackagePath>
-			<PackageCopyToOutput>true</PackageCopyToOutput>
 		</None>
 		<None Include="ColorVision.Core.props" Link="libs\ColorVision.Core.props">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 			<Pack>true</Pack>
-			<PackagePath>build\net8.0\ColorVision.Core.props</PackagePath>
+			<PackagePath>build\ColorVision.Core.props</PackagePath>
+		</None>
+		<None Include="ColorVision.Core.targets" Link="libs\ColorVision.Core.targets">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+			<Pack>true</Pack>
+			<PackagePath>build\ColorVision.Core.targets</PackagePath>
 		</None>
 	</ItemGroup>
 	<ItemGroup>
