--- a/UI/ColorVision.Core/ColorVision.Core.csproj
+++ b/UI/ColorVision.Core/ColorVision.Core.csproj
@@ -11,43 +11,41 @@
 	  <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
 	<ItemGroup>
-		<None Include="..\..\x64\Release\opencv_helper.dll" Link="libs\opencv_helper.dll">
+		<Content Include="..\..\x64\Release\opencv_helper.dll" Link="libs\opencv_helper.dll">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 			<Pack>true</Pack>
-			<PackagePath>libs</PackagePath>
-		</None>		
-		<None Include="..\..\packages\opencv\x64\opencv_core4100.dll" Link="libs\opencv_core4100.dll">
+			<PackagePath>runtimes/win-x64/native</PackagePath>
+		</Content>		
+		<Content Include="..\..\packages\opencv\x64\opencv_core4100.dll" Link="libs\opencv_core4100.dll">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 			<Pack>true</Pack>
-			<PackagePath>libs</PackagePath>
-		</None>
-		<None Include="..\..\packages\opencv\x64\opencv_highgui4100.dll" Link="libs\opencv_highgui4100.dll">
+			<PackagePath>runtimes/win-x64/native</PackagePath>
+		</Content>
+		<Content Include="..\..\packages\opencv\x64\opencv_highgui4100.dll" Link="libs\opencv_highgui4100.dll">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 			<Pack>true</Pack>
-			<PackagePath>libs</PackagePath>	
-		</None>
-		<None Include="..\..\packages\opencv\x64\opencv_imgcodecs4100.dll" Link="libs\opencv_imgcodecs4100.dll">
+			<PackagePath>runtimes/win-x64/native</PackagePath>	
+		</Content>
+		<Content Include="..\..\packages\opencv\x64\opencv_imgcodecs4100.dll" Link="libs\opencv_imgcodecs4100.dll">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 			<Pack>true</Pack>
-			<PackagePath>libs</PackagePath>
-			</None>
-		<None Include="..\..\packages\opencv\x64\opencv_imgproc4100.dll" Link="libs\opencv_imgproc4100.dll">
+			<PackagePath>runtimes/win-x64/native</PackagePath>
+			</Content>
+		<Content Include="..\..\packages\opencv\x64\opencv_imgproc4100.dll" Link="libs\opencv_imgproc4100.dll">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 			<Pack>true</Pack>
-			<PackagePath>libs</PackagePath>
-		</None>
-		<None Include="..\..\packages\opencv\x64\opencv_videoio4100.dll" Link="libs\opencv_videoio4100.dll">
+			<PackagePath>runtimes/win-x64/native</PackagePath>
+		</Content>
+		<Content Include="..\..\packages\opencv\x64\opencv_videoio4100.dll" Link="libs\opencv_videoio4100.dll">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 			<Pack>true</Pack>
-			<PackagePath>libs</PackagePath>
-		</None>
+			<PackagePath>runtimes/win-x64/native</PackagePath>
+		</Content>
 		<None Include="ColorVision.Core.props" Link="libs\ColorVision.Core.props">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 			<Pack>true</Pack>
 			<PackagePath>build\ColorVision.Core.props</PackagePath>
 		</None>
 		<None Include="ColorVision.Core.targets" Link="libs\ColorVision.Core.targets">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 			<Pack>true</Pack>
 			<PackagePath>build\ColorVision.Core.targets</PackagePath>
 		</None>
