--- a/UI/ColorVision.Core/ColorVision.Core.targets
+++ b/UI/ColorVision.Core/ColorVision.Core.targets
@@ -1,6 +1,13 @@
+<?xml version="1.0" encoding="utf-8"?>
 <Project>
   <!-- See https://aka.ms/dotnet/msbuild/customize for more details on customizing your build -->
-	<NativeDlls>$(MSBuildThisFileDirectory)..\..\libs</NativeDlls>
+	<NativeLibs Include="$(MSBuildThisFileDirectory)..\..\libs\**\*.dll" />
+	<ItemGroup>
+		<!-- Reference the native DLLs from the NuGet package -->
+		<Content Include="$(MSBuildThisFileDirectory)..\..\libs\**\*.dll">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+	</ItemGroup>
 	<Target Name="CustomAfterBuildTarget" AfterTargets="Build">
 	  <Copy SourceFiles="@(NativeDlls)" DestinationFolder="$(TargetDir)/libs/%(RecursiveDir)" />
   </Target>
