--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,11 +22,9 @@ jobs:
       with:
         cuda: '12.5.0'
     
+    - name: checkoutcuda
     - run: echo "Installed cuda version is: ${{steps.cuda-toolkit.outputs.cuda}}"
-    - run: echo "Cuda install location: ${{steps.cuda-toolkit.outputs.CUDA_PATH}}"
-    - run: nvcc -V
-    
-    
+   
     
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
