--- a/UI/ColorVision.Themes/ColorVision.Themes.csproj
+++ b/UI/ColorVision.Themes/ColorVision.Themes.csproj
@@ -54,4 +54,11 @@
 	    <LastGenOutput>Resources.Designer.cs</LastGenOutput>
 	  </EmbeddedResource>
 	</ItemGroup>
+
+	<ItemGroup>
+	  <None Update="README.md">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
+	</ItemGroup>
 </Project>
