--- a/Plugins/ColorVisonChat/ColorVisonChat.csproj
+++ b/Plugins/ColorVisonChat/ColorVisonChat.csproj
@@ -5,6 +5,7 @@
 	  <Nullable>enable</Nullable>
 	  <ImplicitUsings>enable</ImplicitUsings>
 	  <UseWPF>true</UseWPF>
+	  <VersionPrefix>1.0.0.1</VersionPrefix>
   </PropertyGroup>
 
   <ItemGroup>
