--- a/UI/ColorVision.Solution/ColorVision.Solution.csproj
+++ b/UI/ColorVision.Solution/ColorVision.Solution.csproj
@@ -5,21 +5,13 @@
 		<Nullable>enable</Nullable>
 		<UseWPF>true</UseWPF>
 		<ImplicitUsings>enable</ImplicitUsings>
-		<VersionPrefix>1.1.9.32</VersionPrefix>
+		<VersionPrefix>1.1.10.1</VersionPrefix>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 		<PackageProjectUrl>https://github.com/xincheng213618/scgd_general_wpf</PackageProjectUrl>
 		<IncludeSymbols>True</IncludeSymbols>
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
 		<PackageReadmeFile></PackageReadmeFile>
 	</PropertyGroup>
-
-	<ItemGroup>
-		<None Remove="Assets\Image\background0.png" />
-		<None Remove="Assets\Image\ColorVision.ico" />
-		<None Remove="Assets\Image\ColorVision1.ico" />
-		<None Remove="Assets\Image\归档查询.png" />
-		<None Remove="Assets\Image\综合查询.png" />
-	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Extended.Wpf.Toolkit" Version="4.7.25103.5738" />
@@ -45,20 +37,14 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<Resource Include="Assets\Image\background0.png">
-			<CopyToOutputDirectory>Never</CopyToOutputDirectory>
-		</Resource>
-		<Resource Include="Assets\Image\ColorVision.ico" />
-		<Resource Include="Assets\Image\ColorVision1.ico" />
-		<Resource Include="Assets\Image\归档查询.png" />
-		<Resource Include="Assets\Image\综合查询.png" />
-	</ItemGroup>
-
-	<ItemGroup>
 	  <None Update="README.md">
 	    <PackagePath>\</PackagePath>
 	    <Pack>True</Pack>
 	  </None>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Assets\" />
 	</ItemGroup>
 	
 
