--- a/Projects/ProjectKB/ProjectKB.csproj
+++ b/Projects/ProjectKB/ProjectKB.csproj
@@ -36,6 +36,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Engine\ColorVision.Engine\ColorVision.Engine.csproj" />
+    <ProjectReference Include="..\..\UI\ColorVision.ImageEditor\ColorVision.ImageEditor.csproj" />
+    <ProjectReference Include="..\..\UI\ColorVision.UI\ColorVision.UI.csproj" />
   </ItemGroup>
 
   <ItemGroup>
