添加 README.md 支持并更新版本前缀
在多个项目文件中添加了对 `README.md` 文件的支持，确保在构建包时包含该文件。更新版本前缀从 `1.1.11.2` 更改为 `1.1.11.3`。在 `README.md` 中添加了对各个模块的描述及代码示例。移除了部分资源文件的引用，并进行了项目文件的结构调整，以优化构建和打包过程。

--- a/UI/ColorVision.Common/ColorVision.Common.csproj
+++ b/UI/ColorVision.Common/ColorVision.Common.csproj
@@ -11,6 +11,7 @@
 	  <PackageProjectUrl>https://github.com/xincheng213618/scgd_general_wpf</PackageProjectUrl>
 	  <IncludeSymbols>True</IncludeSymbols>
 	  <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+	  <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
   <ItemGroup>
@@ -27,6 +28,13 @@
 
   <ItemGroup>
     <Resource Include="Assets\Cursor\eraser.cur" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="README.md">
+      <PackagePath>\</PackagePath>
+      <Pack>true</Pack>
+    </None>
   </ItemGroup>
 
 
