--- a/UI/ColorVision.Core/ColorVision.Core.csproj
+++ b/UI/ColorVision.Core/ColorVision.Core.csproj
@@ -6,11 +6,12 @@
 		<UseWPF>true</UseWPF>
 		<ImplicitUsings>disable</ImplicitUsings>
 		<AllowUnsafeBlocks>True</AllowUnsafeBlocks>
-		<VersionPrefix>1.1.11.2</VersionPrefix>
+		<VersionPrefix>1.1.11.3</VersionPrefix>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 		<PackageProjectUrl>https://github.com/xincheng213618/scgd_general_wpf</PackageProjectUrl>
 		<IncludeSymbols>True</IncludeSymbols>
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -50,7 +51,10 @@
 		</Content>
 	</ItemGroup>
 	<ItemGroup>
-
+	  <None Include="README.md">
+		  <Pack>true</Pack>
+		  <PackagePath>\</PackagePath>
+	  </None>
 	</ItemGroup>
 
 </Project>
