--- a/UI/ColorVision.Themes/ColorVision.Themes.csproj
+++ b/UI/ColorVision.Themes/ColorVision.Themes.csproj
@@ -10,6 +10,7 @@
 		<PackageProjectUrl>https://github.com/xincheng213618/scgd_general_wpf</PackageProjectUrl>
 		<IncludeSymbols>True</IncludeSymbols>
 		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
 	<ItemGroup>
 	  <None Remove="Assets\Image\background0.png" />
@@ -59,7 +60,7 @@
 	  <None Update="Assets\images\Cut.svg">
 	    <CopyToOutputDirectory>Never</CopyToOutputDirectory>
 	  </None>
-	  <None Update="README.md">
+	  <None Include="README.md">
 	    <Pack>True</Pack>
 	    <PackagePath>\</PackagePath>
 	  </None>
